[package]
name = "sophia_oxigraph"
version = "0.1.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sophia_term = { version = "0.5.2" }
sophia = { version = "0.5.2" }
once_cell = "1.3.1"
oxigraph = { git = "https://github.com/Tpt/oxigraph" }
#oxigraph = { path = "../oxigraph/lib" }
thiserror = "1.0.15"

[dev-dependencies]
lazy_static = "1.4.0"
sophia = { version = "0.5.2", features = ["test_macro"] }

[patch.crates-io]
#sophia { path = "../sophia_rs/sophia/" }
#sophia_term { path = "../sophia_rs/term/" }

